# statistiekhub-backend-django

./: .dev.env  .dockerignore  .example.env  .gitignore  Dockerfile  Makefile  README.md  compose.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_linting.in  requirements_linting.txt
.github/: dependabot.yml
.github/workflows/: dependabot-slack-notification.yml  dependabot.yml  linting.yml  linting_and_tests.yml  run_tests.yml  tests.yml
deploy/: diff.py  docker-pre-deploy.sh  docker-run.sh
docker/azurite/: init.sh
otel-collector/: Dockerfile  config.local.yaml
scripts/: publish_measures.sql  publish_observations.sql  publish_statistics.sql  publish_to_refdb.sql  start_publish.sh
src/custom_db_backend/: base.py
src/fixtures/: auth.group.json  import_auth.json  import_dimension.json  import_filter.json  import_group.json  import_spatialdimension.json  import_spatialdimensiontype.json  import_temporaldimension.json  import_temporaldimensiontype.json  import_theme.json  import_topic.json  import_unit.json  readme.md
src/health/: views.py
src/import_export_celery/: README.md  admin.py  admin_actions.py  read.md  tasks.py  utils.py
src/import_export_job/: README.md  admin.py  admin_actions.py  apps.py  job.py  model_config.py  tasks.py  urls.py  utils.py  views.py
src/job_consumer/: job_tools.py  queue_job_consumer.py  (+2 more)
tests/: conftest.py  temp_storage.py  test_health.py  test_importjob.py  test_main_utils.py  test_migrations.py
(+191 files in other folders)
