[project]
name = "statistiekhub-backend-django"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dynamic = ["version"]

[tool.pytest.ini_options]
addopts = "-s --cov --cov-config /app/pyproject.toml --disable-pytest-warnings "

[tool.coverage.run]
source = ["/", "/app/src"]
omit = [
    "/app/tests",
    "/app/src/main/wsgi.py",
    "/app/src/main/settings.py",
    "/app/src/manage.py",
    "/app/src/main/asgi.py",
    "/app/src/main/auth.py",
    "*/urls.py",
    "*/apps.py",
    "*/models.py",
    "*/utils/timer.py",
    "*/admin.py",
    "/app/src/main/celery.py",
    "/app/src/main/kombu/transport/*",
    "*/csv_import/observation/*"  # skip the csv_import/observation code for now
]

[tool.coverage.report]
fail_under = 79 # temporary lowered
skip_covered = true
show_missing = true
sort = "Cover"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["W293", ]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (autoflake uses this)
    "I",   # isort
]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"src/main/settings.py" = ["E402"]
"tests/**.py" = ["F841"]
"src/*/migrations/**.py" = ["E501"]
